week 2 assessment complete

--- a/react-challenge.html
+++ b/react-challenge.html
@@ -23,7 +23,6 @@
     // No need to change anything ABOVE this line ^
 
 
-
       class App extends React.Component{
         constructor(props){
           super(props)
@@ -35,12 +34,12 @@
 
         handleMoodOptions = () => {
           let randomIndex = Math.floor(Math.random() * this.state.moods.length )
-          this.setState({ currentMood: moods[randomIndex] })
+          this.setState({ currentMood: this.state.moods[randomIndex] })
         }
 
         render(){
           return(
-
+          <>
               <h1>Welcome to the Mood Meter App</h1>
 
               <h3>Mood Options:</h3>
@@ -49,14 +48,14 @@
                 { this.state.currentMood }
               </div>
 
-              <button onClick={ handleMoodOptions }>
+              <button onClick={ this.handleMoodOptions }>
                 Click Here For Next Mood option
               </button>
-
+          </>
           )
         }
       }
-
+    
 
 
 
